--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,16 +2,19 @@
   "name": "Airbnb Clone",
   "dockerComposeFile": "./docker-compose.yml",
   "service": "app",
-  "postCreateCommand": "/workspace/.devcontainer/postCreate.sh",
+  "postCreateCommand": "/workspace/.devcontainer/post-create.sh",
   "workspaceFolder": "/workspace",
   "forwardPorts": [4321, 8080],
   "customizations": {
     "vscode": {
       "extensions": [
+        "astro-build.astro-vscode",
+        "bradlc.vscode-tailwindcss",
+        "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
+        "github.vscode-github-actions",
         "github.copilot",
-        "github.copilot-chat",
-        "github.vscode-github-actions"
+        "github.copilot-chat"
       ]
     }
   }
