--- a/.devcontainer/Dockerfile.dev
+++ b/.devcontainer/Dockerfile.dev
@@ -1,11 +1,11 @@
-# Install Go
-FROM golang:latest
-
-# Install Go Task
-go install github.com/go-task/task/v3/cmd/task@latest
+# Install Node.js
+FROM node:latest AS node
 
 # Install pnpm
-curl -fsSL https://get.pnpm.io/install.sh | sh
+RUN npm install -g pnpm
 
-# Install Node.js
-pnpm env use -g latest
+# Use VS Code Dev Container image for Go as base image
+FROM golang:latest AS go
+
+# Install Go Task (if needed)
+RUN go install github.com/go-task/task/v3/cmd/task@latest
