--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Airbnb Clone",
-  "dockerComposeFile": "./docker-compose.yml",
+  "dockerComposeFile": "docker-compose.yml",
   "service": "app",
   "postCreateCommand": "/workspace/.devcontainer/post-create.sh",
   "workspaceFolder": "/workspace",
