--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,21 +1,37 @@
 {
-  "name": "Airbnb Clone",
+  "name": "airbnb",
   "dockerComposeFile": "docker-compose.yml",
   "service": "app",
   "postCreateCommand": "/workspace/.devcontainer/post-create.sh",
-  "workspaceFolder": "/workspace",
-  "forwardPorts": [4321, 8080],
+  "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+  "remoteUser": "vscode",
+  "forwardPorts": [4321, 8080, 5432],
+  "portsAttributes": {
+    "4321": {
+      "label": "Web (astro)"
+    },
+    "8080": {
+      "label": "Api (go)"
+    },
+    "5432": {
+      "label": "Postgres"
+    }
+  },
   "customizations": {
     "vscode": {
       "extensions": [
         "astro-build.astro-vscode",
         "bradlc.vscode-tailwindcss",
         "dbaeumer.vscode-eslint",
+        "redhat.vscode-yaml",
         "esbenp.prettier-vscode",
         "github.vscode-github-actions",
         "github.copilot",
         "github.copilot-chat"
-      ]
+      ],
+      "settings": {
+        "terminal.integrated.defaultProfile.linux": "zsh"
+      }
     }
   }
 }
