--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,8 +1,10 @@
-version: '3.8'
+version: '3.9'
+
 services:
   app:
-    build: 
-      context: ./
+    build:
+      context: .
       dockerfile: Dockerfile.dev
+    command: sleep infinity
     volumes:
-      - .:/workspace
+      - ../..:/workspaces:cached
