--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,8 @@
         "esbenp.prettier-vscode",
         "github.vscode-github-actions",
         "github.copilot",
-        "github.copilot-chat"
+        "github.copilot-chat",
+        "PKief.material-icon-theme"
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "zsh"
