--- a/.devcontainer/Dockerfile.dev
+++ b/.devcontainer/Dockerfile.dev
@@ -1,5 +1,5 @@
 # Use VS Code Dev Container image for Go as base image
-FROM mcr.microsoft.com/vscode/devcontainers/go as go
+FROM mcr.microsoft.com/vscode/devcontainers/go
 
 # Install Go Task
 RUN go install github.com/go-task/task/v3/cmd/task@latest
