--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,7 +4,7 @@ tasks:
   web:deps:
     cmds:
       - pnpm config set store-dir ~/workspaces/airbnb/web/pnpm
-      - cd web && pnpm install --force
+      - cd web && pnpm install
   web:dev:
     cmds:
       - cd web && npm run dev
